--- a/demo1301/AddOrEditWindow.axaml
+++ b/demo1301/AddOrEditWindow.axaml
@@ -8,19 +8,20 @@
 	<StackPanel Orientation="Horizontal">
 		<StackPanel>
 			<TextBlock Name="titleOfWindow" Margin="10" HorizontalAlignment="Center" Text="3"/>
-			<Image/>
 			<TextBlock Text="Название" Margin="10"/>
 			<TextBox Name="TitleTextBox" Margin="10" Width="150" HorizontalAlignment="Left" />
+			<TextBlock Text="Длительность" Margin="10"/>
+			<TextBox Name="DurationTextBox" Margin="10" Width="150" HorizontalAlignment="Left" />
 			<TextBlock Text="Цена" Margin="10"/> 
 			<TextBox Name="CostTextBox" Margin="10" Width="150" HorizontalAlignment="Left" />
 			<TextBlock Text="Описание" Margin="10"/>
 			<TextBox Name="DescriptionTextBox" Margin="10" Width="150" HorizontalAlignment="Left" />
 			<TextBlock Text="Скидка" Margin="10"/>
 			<TextBox Name="DiscountTextBox" Margin="10" Width="150" HorizontalAlignment="Left" />
-			<Button Name="SaveButton" HorizontalAlignment="Center" Click="SaveButton_Click" Width="100"/>
+			<Button Name="SaveButton" HorizontalAlignment="Center"  Content="Сохранить" Click="SaveButton_Click" Width="100"/>
 		</StackPanel>
 		<StackPanel Margin="10">
-			<Image Name="PhotoService" Width="150" Height="150"/>
+			<Image Name="PhotoService"  Width="150" Height="150"/>
 			<TextBlock Text="Загрузить изображение" Margin="0,10,0,0"/>
 			<Button Content="Выбрать файл" Click="SelectImageButton_Click"/>
 		</StackPanel>
